Bugfix/ETSL-379 fixed text alignment, button alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/features_section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/features_section.scss
@@ -124,6 +124,7 @@
 }
 
 @include respond-to-max($phone) {
+
   .feature-watch {
     margin-bottom: 11rem !important;
     max-height: 374px;
@@ -131,6 +132,7 @@
     padding-top: $padding-step-3 !important;
 
     .image {
+
       .cmp-image__image {
         height: 283px;
         margin-left: 1.5rem;
@@ -299,6 +301,7 @@
 }
 
 @include respond-to-max($phone) {
+
   .feature-watch-flipped {
     margin-bottom: 11rem !important;
     max-height: 374px;
@@ -306,6 +309,7 @@
     padding-top: $padding-step-3 !important;
     
     .image {
+      
       .cmp-image__image {
         height: 283px;
         margin-left: 1.5rem;
@@ -388,6 +392,7 @@
     margin-bottom: toRem(0);
     padding-bottom: toRem(44);
     padding-top: toRem(64);
+    position: relative;
     width: toRem(588);
     
     @include respond-to-max($tablet) {
@@ -473,29 +478,29 @@
     }
 
     sup {
-      top: toRem(-12);
+      // top: toRem(-12);
 
       @include respond-to-max($tablet) {
-        top: toRem(-36);
+        top: toRem(0);
       }
     }
 
     .cmp-button--primary,
     .cmp-button--promo,
     .cmp-button--secondary {
-      bottom: toRem(25);
-      left: toRem(75);
-      position: relative;
+      bottom: toRem(48);
+      left: toRem(288);
+      position: absolute;
       width: toRem(288);
       
       @include respond-to-max($tablet) {
-        left: toRem(-208);
+        bottom: toRem(0);
+        left: toRem(0);
         margin: toRem(24) toRem(0) toRem(0);
-        top: toRem(20);
       }
 
       @include respond-to-max($phone) {
-        left: toRem(-205);
+        bottom: toRem(-67);
       }
     }
   }
@@ -528,6 +533,7 @@
 }
 
 .banner-full-bleed__right {
+
   .cmp-text {
     float: right;
 
@@ -546,6 +552,7 @@
   margin-bottom: 13rem;
 
   .cmp-container {
+
     > .aem-Grid {
       flex-direction: column;
     }
@@ -582,6 +589,7 @@
 
 //beigebg--pattern-bg teaser variation
 .beigebg--pattern-bg {
+
   .cmp-image__image {
     position: relative;
     z-index: 4;
